<resources>
    <string name="app_name">Widget Collections</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="Sunday">Su</string>
    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>
    <string name="Month_1">January</string>
    <string name="Month_2">February</string>
    <string name="Month_3">March</string>
    <string name="Month_4">April</string>
    <string name="Month_5">May</string>
    <string name="Month_6">June</string>
    <string name="Month_7">July</string>
    <string name="Month_8">August</string>
    <string name="Month_9">September</string>
    <string name="Month_10">October</string>
    <string name="Month_11">November</string>
    <string name="Month_12">December</string>
    <string name="SUNDAY">Sunday</string>
    <string name="MONDAY">Monday</string>
    <string name="TUESDAY">Tuesday</string>
    <string name="WEDNESDAY">Wednesday</string>
    <string name="THURSDAY">Thursday</string>
    <string name="FRIDAY">Friday</string>
    <string name="SATURDAY">Saturday</string>
    <string name="Enter_todays_memo">Enter a note</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <!-- Strings used for fragments for navigation -->

    <string name="calendar">Calendar</string>
    <string name="todays_memo">To Do</string>
    <string name="simple_memo">Note</string>
    <string name="title_activity_simple__memo_activity" translatable="false">Simple_Memo_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="to_do_in_day">To do in the day</string>
    <string name="to_do_in_month">To do in the month</string>
    <string name="week_1">1st week</string>
    <string name="week_2">2nd week</string>
    <string name="week_3">3rd week</string>
    <string name="week_4">4th week</string>
    <string name="week_5">5th week</string>
    <string name="week_6">6th week</string>
    <string name="Week">Week</string>
    <string name="to_do_in_week">To do in the week</string>
    <string name="Call">Call</string>
    <string name="Email">Email</string>
    <string name="Meet">Meet</string>
    <string name="Buy">Buy</string>
    <string name="Clean">Clean</string>
    <string name="Pay">Pay</string>
    <string name="Go">Go</string>
    <string name="Ask">Ask</string>
    <string name="Do">Do</string>
    <string name="Work">Work</string>
    <string name="Exercise">Exercise</string>
    <string name="Sleep">Sleep</string>
    <string name="Pick">Pick</string>
    <string name="Study">Study</string>
    <string name="Read">Read</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="day4">Day 4</string>
    <string name="day5">Day 5</string>
    <string name="day6">Day 6</string>
    <string name="day7">Day 7</string>
    <string name="day8">Day 8</string>
    <string name="day9">Day 9</string>
    <string name="day10">Day 10</string>
    <string name="day11">Day 11</string>
    <string name="day12">Day 12</string>
    <string name="day13">Day 13</string>
    <string name="day14">Day 14</string>
    <string name="day15">Day 15</string>
    <string name="day16">Day 16</string>
    <string name="day17">Day 17</string>
    <string name="day18">Day 18</string>
    <string name="day19">Day 19</string>
    <string name="day20">Day 20</string>
    <string name="day21">Day 21</string>
    <string name="day22">Day 22</string>
    <string name="day23">Day 23</string>
    <string name="day24">Day 24</string>
    <string name="day25">Day 25</string>
    <string name="day26">Day 26</string>
    <string name="day27">Day 27</string>
    <string name="day28">Day 28</string>
    <string name="day29">Day 29</string>
    <string name="day30">Day 30</string>
    <string name="day31">Day 31</string>
    <string name="Day">Day</string>
    <string name="back">&lt; Back</string>
    <string name="repeat_every_day">Repeats daily</string>
    <string name="repeat_every_week">Repeats weekly</string>
    <string name="repeat_every_month">Repeats monthly</string>
    <string name="repeat_every_year">Repeats yearly</string>
    <string name="done">Done</string>
    <string name="repeat_every">Repeats every</string>
    <string name="day">day</string>
    <string name="repeat_every_2"></string>
    <string name="week">week</string>
    <string name="on_days">Do on</string>
    <string name="month">month</string>
    <string name="By_date">By date</string>
    <string name="By_day_of_the_week">By day of week</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_4th">4th</string>
    <string name="_5th">5th</string>
    <string name="_6th">6th</string>
    <string name="last">last</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="year">year</string>
    <string name="next">Next></string>
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="Jun">Jun</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="date_order">MM/dd/yyyy</string>
    <string name="month_order">MM/yyyy</string>
    <string name="week_ordar">first</string>
    <string name="week_last">Last week</string>
    <string name="on_weeks">Do on</string>
    <string name="Delete">Delete</string>
    <string name="No_repeat">No repeat</string>
    <string name="Deletes_the_set_repeat">Deletes the set repeat.</string>
    <string name="End_of_repeat">End of repeat</string>
    <string name="Year_unit"></string>
    <string name="end_in">"End In "</string>
    <string name="Do_not_show_on_checked">Do not show on checked</string>
    <string name="All_day">All day</string>
    <string name="Schedule">Schedule</string>
    <string name="Analog_Clock">Analog Clock</string>
    <string name="Digital_Clock">Digital Clock</string>
    <string name="title_activity_app_widget_configure" translatable="false">AppWidgetConfigureActivity</string>
    <string name="event1">Event1</string>
    <string name="event2">Event2</string>
    <string name="event3">Event3</string>
    <string name="event4">Event4</string>
    <string name="title_activity_select_day" translatable="false">Select_day_activity</string>
    <string name="Reset">Reset</string>
    <string name="Unable_to_add_a_widget">Unable to add a widget.</string>
    <string name="Customize">Customize</string>
    <string name="How_to_use">How to use</string>
    <string name="Allow_it_to_work_with_Google_Calendar">Please grant access to work with Google Calendar</string>
    <string name="Select_by_pressing_the_date_on_the_calendar">Select the date by pressing the calendar date</string>
    <string name="You_can_change_the_month">Press \"&lt;\" and \">\" buttons to change the month</string>
    <string name="ca35">Calendar can be linked to To Do and Schedule</string>
    <string name="ca2">Calendar displays the dates and events of Google Calendar in the month</string>
    <string name="sc2">Schedule provides a graphical representation of Google Calendar events</string>
    <string name="sc30">Press the date in the top left-hand corner to open the calendar</string>
    <string name="sc34">Press Event to view the contents</string>
    <string name="sc42">Press \"+\" button to add an event</string>
    <string name="sc53">You can also change the Schedule date from the Calendar</string>
    <string name="tm2">To Do displays what needs to do on the day</string>
    <string name="tm23">Click on a widget to edit the day\'s To Do</string>
    <string name="tm40">Press \"三\" button to display the checklist</string>
    <string name="tm54">You can also change the To Do date from the Calendar</string>

</resources>