<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
        <Space
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_style"
            android:orientation="vertical"
            android:id="@+id/today_memo_dialog_main"
            android:layout_weight="8">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/today_memo_dialog_now"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/frame_style"
                    android:backgroundTint="@color/blue"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:id="@+id/today_memo_dialog_add"
                    android:textSize="15sp"
                    android:layout_marginRight="10dp"
                    android:text="+"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/today_memo_dialog_items">
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:id="@+id/today_memo_dialog_today_text"
                        android:background="@drawable/frame_style"
                        android:backgroundTint="@color/blue"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:layout_marginLeft="15dp"/>
                    <EditText
                        android:id="@+id/today_memo_dialog_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="4dp"
                        android:hint="@string/to_do_in_day"
                        android:background="@android:drawable/edit_text"/>

                    <ImageView
                        android:id="@+id/today_memo_dialog_BG"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/today_memo_dialog_cancel"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_style"
                    android:backgroundTint="@color/gray"
                    android:text="@string/Cancel"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/today_memo_dialog_ok"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_style"
                    android:backgroundTint="@color/blue"
                    android:text="@string/OK"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
        <Space
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/today_memo_dialog_ks"
        android:layout_alignParentBottom="true"
        android:background="@drawable/frame_style"
        android:scrollbars="none"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/today_memo_dialog_im"
        android:visibility="gone"
        android:background="@color/gray"/>

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:id="@+id/today_memo_dialog_add_window"
        android:inAnimation="@anim/scale_in_fast"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:background="@drawable/framestyle4">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@drawable/frame_style"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white"
                android:id="@+id/today_memo_dialog_back"
                android:textSize="10sp"
                android:text="@string/back"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/framestyle3"
                android:textColor="@color/black"
                android:id="@+id/today_memo_dialog_now_day"
                android:text="@string/to_do_in_day"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/framestyle3"
                android:textColor="@color/black"
                android:id="@+id/today_memo_dialog_now_week"
                android:text="@string/to_do_in_week"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/framestyle3"
                android:textColor="@color/black"
                android:id="@+id/today_memo_dialog_now_month"
                android:text="@string/to_do_in_month"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
    </ViewFlipper>
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/today_memo_layout_mrgin"
        android:layout_marginLeft="@dimen/today_memo_layout_mrgin"
        android:id="@+id/today_memo_dialog_add_window2"
        android:inAnimation="@anim/scale_in_fast"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:background="@drawable/framestyle4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/frame_style"
                    android:backgroundTint="@color/blue"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:id="@+id/today_memo_dialog_back2"
                    android:textSize="10sp"
                    android:text="@string/back"
                    android:layout_marginLeft="15dp"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/frame_style"
                    android:backgroundTint="@color/red"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:id="@+id/today_memo_dialog_add_mode"
                    android:textSize="10sp"
                    android:text="@string/done"
                    android:layout_marginRight="15dp"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/today_memo_dialog_mode_list">
                <ViewFlipper
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inAnimation="@android:anim/slide_in_left"
                    android:id="@+id/today_memo_dialog_mode_list_vf">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/framestyle3"
                            android:textColor="@color/black"
                            android:text="@string/repeat_every_day"
                            android:id="@+id/today_memo_dialog_rd"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/framestyle3"
                            android:textColor="@color/black"
                            android:text="@string/repeat_every_week"
                            android:id="@+id/today_memo_dialog_rw"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/framestyle3"
                            android:textColor="@color/black"
                            android:text="@string/repeat_every_month"
                            android:id="@+id/today_memo_dialog_rm"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/framestyle3"
                            android:textColor="@color/black"
                            android:text="@string/repeat_every_year"
                            android:id="@+id/today_memo_dialog_ry"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/framestyle3"
                            android:textColor="@color/black"
                            android:text="@string/No_repeat"
                            android:id="@+id/today_memo_dialog_nr"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/framestyle3"
                            android:textColor="@color/black"
                            android:text="@string/End_of_repeat"
                            android:id="@+id/today_memo_dialog_re"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/framestyle3"
                            android:textColor="@color/black"
                            android:text="@string/Do_not_show_on_checked"
                            android:id="@+id/today_memo_dialog_oncheckd"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                    </LinearLayout>
                </ViewFlipper>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/today_memo_dialog_mode_window"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="@dimen/today_memo_layout_padding">

            </LinearLayout>
        </LinearLayout>
    </ViewFlipper>

</RelativeLayout>